<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="6"
    android:padding="15dp"
    android:layout_gravity="center">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/txtResult"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:focusable="false"
        android:cursorVisible="false"
        android:inputType="numberDecimal"
        android:gravity="right"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn1"
        android:text="@string/btn1"
        android:contentDescription="@string/btn1"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn2"
        android:text="@string/btn2"
        android:contentDescription="@string/btn2"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn3"
        android:text="@string/btn3"
        android:contentDescription="@string/btn3"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn4"
        android:text="@string/btn4"
        android:contentDescription="@string/btn4"
        android:onClick="buttonClick"/>

    <Button
        android:layout_marginTop="15dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn5"
        android:text="@string/btn5"
        android:contentDescription="@string/btn5"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn6"
        android:text="@string/btn6"
        android:contentDescription="@string/btn6"
        android:onClick="buttonClick"/>

    <Button
        android:layout_marginTop="15dp"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn7"
        android:text="@string/btn7"
        android:contentDescription="@string/btn7"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn8"
        android:text="@string/btn8"
        android:contentDescription="@string/btn8"
        android:onClick="buttonClick"/>

    <Button
        android:layout_marginTop="15dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn9"
        android:text="@string/btn9"
        android:contentDescription="@string/btn9"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btn0"
        android:text="@string/btn0"
        android:contentDescription="@string/btn0"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btnComma"
        android:text="@string/btnPoint"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="3"
        android:layout_column="3"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btnDelete"
        android:text="@string/btnBack"
        android:onClick="buttonClick"/>

    <Button
        android:layout_marginTop="15dp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btnSubtract"
        android:text="@string/btnMinus"
        android:onClick="buttonClick"/>

    <Button
        android:layout_marginTop="15dp"
        android:layout_row="4"
        android:layout_column="2"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btnMultiply"
        android:text="@string/btnMult"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btnAdd"
        android:text="@string/btnPlus"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="4"
        android:layout_column="3"
        android:layout_height="70dp"
        android:layout_width="wrap_content"
        android:id="@+id/btnDivide"
        android:text="@string/btnDiv"
        android:onClick="buttonClick"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="175dp"
        android:layout_height="70dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="15dp"
        android:layout_row="5"
        android:elevation="0dp"
        android:text="@string/btnC"
        android:onClick="buttonClick"/>
    <Button
        android:layout_marginTop="15dp"
        android:layout_row="5"
        android:layout_column="2"
        android:layout_height="70dp"
        android:id="@+id/btnResult"
        android:text="@string/btnResult"
        android:layout_columnSpan="2"
        android:layout_width="175dp"
        android:onClick="buttonClick"/>


</GridLayout>
